# planner_module

./: .env.example  .gitignore  README.md  app.py  instruction.txt  main.py  pyproject.toml  requirements.txt  temp.txt
outputs/: execution_log.json  summary_report.md
src/: config.py  executor.py  logger.py  mocks.py  models.py  planner.py  planner_module.py  prompt.py  vlm_backend.py  workflow.py
src/config/: settings.py
tests/: test_app.py  test_executor.py  test_gpu.py  test_planner.py  test_smolvlm.py  test_ui_capture.py  test_ui_state.py  test_workflow.py
ui_simulator/: controller.py  main.py  main_window.py  style.qss
ui_simulator/pages/: home_page.py  keyboard_page.py  navigation_page.py  settings_page.py  vehicle_page.py
ui_simulator/widgets/: card_button.py  info_card.py  keyboard.py  sidebar.py  status_bar.py
