[project]
name = "planner-module"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.8",
    "groq>=0.18.0",
    "jsonschema>=4.0.0",
    "python-dotenv",
    "Pillow",
    "torch",
    "torchvision",
    "transformers>=4.50.0,<5.0.0",
    "accelerate",
    "bitsandbytes",
    "huggingface_hub",
    "sentencepiece",
    "einops",
    "opencv-python",
    "pytest",
    "pytest-qt"
]
